# MatchAnnot

./: .gitignore  CHANGELOG  pyproject.toml
src/matchannot/: Annotations.py  Best.py  CigarString.py  Cluster.py  ClusterReport.py  PolyA.py  Reference.py  SWAligner.py  __about__.py  __init__.py  clusterView.py  mapAnnot.py  matchAnnot.py  pickleAnnot.py  pickleRef.py  postAnnot.py  showAnnot.py  splitSAM.py  trimPrimers.py  trimSplit.py
